--- a/css/styles.css
+++ b/css/styles.css
@@ -727,6 +727,7 @@ textarea {
 .lg-12 {
     flex  : none;
     width : 100%;
+    height: 50%;
 }
 
 .block-lg-one-eight>.column {
@@ -3378,7 +3379,7 @@ img.u-pull-left {
     width            : 3.2rem;
     background-color : var(--color-border);
     position         : absolute;
-    top              : 50%;
+    top              : 10%;
     left             : calc(var(--timeline-vertical-border-pos) + 1px);
 }
 
@@ -3763,7 +3764,7 @@ img.u-pull-left {
     vertical-align : bottom;
     margin-bottom  : 0;
     transition     : all, 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-}
+}F
 
 .folio-item__thumb .das {
     vertical-align : bottom;
